<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:ignore="DuplicateIds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="bottom|center_horizontal"
                android:padding="10dp"
                android:text="@string/saved_studio_playlist"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/welcome_android_studio"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/subscribe_studio"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/sonu_kumar_singh"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>

