<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".EditViewImageActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:gravity="center"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        android:text="@string/sign_up"

        android:textSize="30sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/signupimages"
        android:scaleType="centerInside"

        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="textEmailAddress"
        android:maxEms="20"
        android:minEms="3"
        android:ems="10"
        android:layout_margin="10sp"
        android:textColorHint="@color/purple_500" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="9"
        android:layout_margin="6sp"
        android:textColorHint="@color/orange"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/locked_computer"
        app:tint="@color/orange" />


</LinearLayout>